--- a/index.html
+++ b/index.html
@@ -1,1 +1,4 @@
-<a href="/puzzlescript-games/MazeGrowth.html">Maze Growth</a>
+<ul>
+  <li><a href="/puzzlescript-games/MazeGrowth.html">Maze Growth</a></li>
+  <li><a href="/puzzlescript-games/DiggingThroughDirt.html">Digging through the Dirt</a></li>
+</ul>
